<resources>
    <string name="app_name">MindFinder</string>
    <string name="question">Pilih Satu dari Empat Pilihan Jawaban yang Paling Menggambarkan Diri Anda.</string>
    <string name="welcome_text">Welcome! Sebelum menggunakan Aplikasi, Silahkan Mengisi Nama dan Usia.</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="usia">Usia</string>
    <string name="start">Start!</string>
    <string name="next">Next</string>
    <string name="done">Selesai</string>

    <string name="name_invalid">Nama tidak boleh kosong.</string>
    <string name="age_invalid">Usia tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>

    <string name="kesimpulan">%1$s dengan usia %2$s tahun, memiliki tipe personality %3$s.</string>
    <string name="answer_counter">Pertanyaan %1$d/%2$d</string>

    <string name="personality_d">Orang-orang dengan kepribadian Dominance memiliki kecenderungan karakter yang dominan, kuat, dengan ego yang tinggi. They are independent and risk taker. Mereka mudah merasa bosan dengan rutinitas, menyukai tantangan dan inovasi. Kepribadian DISC ini juga menyukai authority, responsibility, decision making, problem solving, multi tasking, maupun hal-hal lain yang membuatnya menjadi lebih dominan.</string>
    <string name="personality_i">Karakter DISC ini memiliki pengaruh yang besar bagi sekitarnya. Kepercayaan dirinya, antusiasmenya, selera humornya, dan optimismenya membawa semangat bagi lingkungannya. Sebagai negosiator yang handal, orang-orang dengan kepribadian Influence memiliki kemampuan persuasif yang bagus. Mereka menyukai popularitas, sehingga mereka sulit menerima penolakan dari orang lain.</string>
    <string name="personality_s">Konsisten, tenang, dan sabar adalah beberapa karakter yang menggambarkan kepribadian DISC yang satu ini. Sebaliknya, orang-orang dengan kepribadian Steadiness sulit menerima perubahan dan butuh waktu lama untuk menyesuaikan diri dengan lingkungan baru. Maka, mereka menyukai lingkungan yang memberi rasa aman tanpa perubahan yang mendadak.</string>
    <string name="personality_c">Orang-orang berkarakter Compliance biasanya tekun, sistematis, teliti, cermat, fokus pada ketepatan dan kualitas. Cenderung analitis dan kritis, sosok kepribadian DISC ini suka mengejar kualitas dengan standar yang tinggi dan mengerjakan tugas-tugas yang rinci. Karenanya, mereka menyukai batasan, prosedur, dan metode yang jelas.</string>

    <string name="copyright">DISC Personality Test, sesuai namanya adalah aplikasi untuk mengetahui jenis kebpribadian seseorang, secara cepat, mudah, dan akurat.\n\nAplikasi ini dibuat untuk kelas Mobpro 1 (Assessment 1 dan 2). Temukan kodenya di https://github.com/supimadi/DISC-test\n\nCopyright © 2023 Lukman Hakim.\nAll rights reserved.</string>

    <string name="share_template">Hallo! Saya %1$s berusia %2$d tahun, memiliki jenis kepribadian %3$s.\n\n%4$s</string>
    <string name="name_history_template">%1$s | %2$d Tahun | %3$s</string>
    <string name="result_history_template">Jenis Kepribadian: %1$s</string>

    <string name="name_empty">Nama jangan kosong!</string>
    <string name="answer_not_selected">Harap pilih salah satu jawaban!</string>
    <string name="age_empty">Usia jangan kosong!</string>
    <string name="belum_ada_data">Belum Ada Data.</string>
    <string name="riwayat">Riwayat</string>
    <string name="test_history">Riwayat Test</string>
    <string name="disc_test">DISC Test</string>
    <string name="tentang">Tentang</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hasil_test">Hasil Test</string>
    <string name="gambar_ilustrasi_personalitas">Gambar Ilustrasi Personalitas</string>
    <string name="simpan">Simpan</string>
    <string name="share">Share</string>

    <string name="type_d">Dominance</string>
    <string name="type_i">Influence</string>
    <string name="type_s">Steadiness</string>
    <string name="type_c">Compliance</string>
    <string name="success_persist_personality_data">Berhasil Menyimpan Jenis Kepribadian</string>
    <string name="hapus">Hapus</string>
    <string name="delete_all_confirmation">Hapus Semua Data Kepribadian?\nGeser riwayat untuk menghapus satu persatu.</string>
    <string name="hapus_semua">Hapus Semua</string>
    <string name="batal">Batal</string>
    <string name="pilih_jawaban">Pilih dulu jawaban sebelum melanjutkan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="simpan_otomatis">Simpan Otomatis</string>
    <string name="penjelasan_simpan_otomatis">Otomatis menyimpan hasil pengujian ketika selesai.</string>
    <string name="auto_save_prefrences_key">auto_save_prefrences</string>
    <string name="bagikan_hasil">Bagikan Hasil</string>

    <string name="logo_telkom_university">Logo Telkom University</string>
    <string name="mindfinder_logo">mindfinder logo</string>

    <string name="selamat_datang">Selamat Datang</string>

    <string name="onboarding_desc_1">Cek Jenis Personalitas Dengan Mudah, Cepat dan Akurat.</string>
    <string name="onboarding_desc_2">Dapatkan Notifikasi Fakta Menarik Mengenai Kepribadian Manusia.</string>
    <string name="token_admin_preferences">token_admin_preferences</string>
    <string name="token">Token</string>
    <string name="penjelasan_token">Token untuk mengsinkronisasikan data dengan Admin.</string>
    <string name="selesai">Selesai</string>

    <string name="koneksi_error">Koneksi Error</string>
    <string name="channel_name">Fun Fact</string>
    <string name="channel_desc">Fakta menarik mengenai kepribadian manusia</string>
    <string name="notif_title">Fun Fact</string>

    <string name="fun_facts">Fun Facts</string>
    <string name="onboarding_desc_3">Pembuatan Aplikasi Ini Dikerjakan Oleh Mahasiswa Telkom sebagai Bentuk Proyek Tingkat 2.</string>
    <string name="indie">Indie</string>
    <string name="feature_finding">Fitur akan segera diimplentasikan</string>
</resources>
