<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="org.d3if3038.assesment1.ui.welcome.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_PTestFragment"
            app:destination="@id/PTestFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="org.d3if3038.assesment1.ui.history.HistoryFragment"
        android:label="@string/test_history"
        tools:layout="@layout/fragment_history"/>
    <fragment
        android:id="@+id/PTestFragment"
        android:name="org.d3if3038.assesment1.ui.ptest.PTestFragment"
        android:label="@string/disc_test"
        tools:layout="@layout/fragment_ptest">
        <action
            android:id="@+id/action_PTestFragment_to_resultFragment"
            app:popUpTo="@id/welcomeFragment"
            app:destination="@id/resultFragment" />
        <argument
            android:name="fullName"
            app:argType="string" />
        <argument
            android:name="age"
            app:argType="integer" />
        <argument
            android:name="isMale"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="org.d3if3038.assesment1.ui.result.ResultFragment"
        android:label="@string/hasil_test"
        tools:layout="@layout/fragment_result">
        <argument
            android:name="fullName"
            app:argType="string" />
        <argument
            android:name="age"
            app:argType="integer" />
        <argument
            android:name="isMale"
            app:argType="boolean" />
        <argument
            android:name="personalityType"
            app:argType="org.d3if3038.assesment1.model.personality.PersonalityCategories" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if3038.assesment1.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about"/>
</navigation>